--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,8 @@
 
 #app {
   max-width: 1280px;
+  padding: 20px 0;
+  height: 100vh;
   width: 100%;
   margin: 0 auto;
   font-weight: normal;
@@ -21,9 +23,16 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
   body {
     display: flex;
     place-items: center;
+  }
+}
+
+@media (max-width: 1280px) {
+  #app {
+    max-width: 100%;
+    padding: 20px;
   }
 }
